@@ -1,3 +1,7 @@
+[B]1.0.15[/B]
+- Updated page parsing because of upstream HTML changes.
+- Added li.setInfo video for Kodi 18.
+
 [B]1.0.14[/B]
 - Updated page parsing because of upstream HTML changes.
 - Added logging.
